--- a/doordash_delivery_est/doordash_est.ipynb
+++ b/doordash_delivery_est/doordash_est.ipynb
@@ -70,7 +70,7 @@
    "source": [
     "## NOTE that all feature engineering functions can be found in doordash_feature_eng.py\n",
     "train_df = pd.read_csv('train_df.csv')\n",
-    "train_df = train_df.drop(columns=['Unnamed: 0','latest_update'])"
+    "#train_df = train_df.drop(columns=['Unnamed: 0','latest_update'])"
    ]
   },
   {
@@ -465,7 +465,7 @@
     "                    cv_holdout_scores.append(accuracy_score(y_true=y_test,y_pred=cv_yhat))\n",
     "    except Exception as ex:\n",
     "        raise ex\n",
-    "    return cv_scores,cv_holdout_scores,whyshape,cv_models"
+    "    return cv_scores,cv_holdout_scores"
    ]
   },
   {
@@ -900,16 +900,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
-    "list_two = auto_xgb_cv[2][1].columns.to_list()"
+    "list_two = auto_xgb_cv[2][2].columns.to_list()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
@@ -918,7 +918,7 @@
        "166"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 63,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -929,194 +929,82 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>clean_store_primary_category__belgian</th>\n",
-       "      <th>created_hour_of_day__8</th>\n",
-       "      <th>clean_store_primary_category__indonesian</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>139725</th>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>139417</th>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>100098</th>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8214</th>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>55973</th>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>54886</th>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>110268</th>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>131932</th>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>146867</th>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>121958</th>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>89927 rows × 3 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "        clean_store_primary_category__belgian  created_hour_of_day__8  \\\n",
-       "139725                                    0.0                     0.0   \n",
-       "139417                                    0.0                     0.0   \n",
-       "100098                                    0.0                     0.0   \n",
-       "8214                                      0.0                     0.0   \n",
-       "55973                                     0.0                     0.0   \n",
-       "...                                       ...                     ...   \n",
-       "54886                                     0.0                     0.0   \n",
-       "110268                                    0.0                     0.0   \n",
-       "131932                                    0.0                     0.0   \n",
-       "146867                                    0.0                     0.0   \n",
-       "121958                                    0.0                     0.0   \n",
-       "\n",
-       "        clean_store_primary_category__indonesian  \n",
-       "139725                                       0.0  \n",
-       "139417                                       0.0  \n",
-       "100098                                       0.0  \n",
-       "8214                                         0.0  \n",
-       "55973                                        0.0  \n",
-       "...                                          ...  \n",
-       "54886                                        0.0  \n",
-       "110268                                       0.0  \n",
-       "131932                                       0.0  \n",
-       "146867                                       0.0  \n",
-       "121958                                       0.0  \n",
-       "\n",
-       "[89927 rows x 3 columns]"
-      ]
-     },
-     "execution_count": 61,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "auto_xgb_cv[2][1][['clean_store_primary_category__belgian','created_hour_of_day__8','clean_store_primary_category__indonesian']]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 47,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "aga = auto_xgb_cv[3][1]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 49,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "list_one = aga.feature_names_in_"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "163"
+       "clean_store_primary_category__belgian  created_hour_of_day__8  clean_store_primary_category__indonesian\n",
+       "0.0                                    0.0                     0.0                                         89927\n",
+       "dtype: int64"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 69,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "auto_xgb_cv[2][1][['clean_store_primary_category__belgian','created_hour_of_day__8','clean_store_primary_category__indonesian']].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "clean_store_primary_category__belgian       0.0\n",
+       "clean_store_primary_category__russian       3.0\n",
+       "created_hour_of_day__8                      0.0\n",
+       "clean_store_primary_category__indonesian    0.0\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 74,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "train_df[['clean_store_primary_category__belgian','clean_store_primary_category__russian','created_hour_of_day__8','clean_store_primary_category__indonesian']].sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "162"
+      ]
+     },
+     "execution_count": 64,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "aga = auto_xgb_cv[3][2]\n",
+    "list_one = aga.feature_names_in_\n",
     "len(list_one)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['clean_store_primary_category__belgian', 'created_hour_of_day__8', 'clean_store_primary_category__indonesian']\n"
+      "['clean_store_primary_category__belgian', 'clean_store_primary_category__russian', 'created_hour_of_day__8', 'clean_store_primary_category__indonesian']\n"
      ]
     }
    ],
