updated results write-up

--- a/doordash_delivery_est/doordash_est.ipynb
+++ b/doordash_delivery_est/doordash_est.ipynb
@@ -449,7 +449,7 @@
     "    'test_RMSE_to_std_ratio': 1.0702272444393133,\n",
     "    'test_MAE:': 905.0272597795322}\n",
     "\n",
-    "Top features (calculated top features, then re-fit the model using the number of features required to explain 90% of the variance (97 features)):\n",
+    "Top features (calculated top features, then re-fit the model using the number of features required to explain 90% of the variance (97 out of 166 features)):\n",
     "\n",
     "    {'train_RMSE:': 755.9607139874619,\n",
     "    'train_RMSE_to_std_ratio': 0.6549741048200352,\n",
@@ -764,12 +764,12 @@
     "\n",
     "Performance statistics for my xgboost model against a holdout sample size of 0.2 are as follows:\n",
     "\n",
-    "    {'train_RMSE:': 800.0005,\n",
-    "    'train_RMSE_to_std_ratio': 0.6904016675988109,\n",
-    "    'train_MAE:': 527.19244,\n",
-    "    'test_RMSE:': 876.9018,\n",
-    "    'test_RMSE_to_std_ratio': 0.7768734571659632,\n",
-    "    'test_MAE:': 597.0269}\n",
+    "    {'train_RMSE:': 721.3968731672105,\n",
+    "    'train_RMSE_to_std_ratio': 0.6250275477020395,\n",
+    "    'train_MAE:': 513.6525913271923,\n",
+    "    'test_RMSE:': 833.177098601647,\n",
+    "    'test_RMSE_to_std_ratio': 0.746361174659176,\n",
+    "    'test_MAE:': 557.4898258667698}\n",
     "\n",
     "    Cross-validation results (RMSE): \n",
     "    [924.6696, 967.5788, 972.99457, 897.3391, 884.804]\n",
@@ -787,14 +787,7 @@
     "\n",
     "Conclusions:\n",
     "1. The time, effort and expense of building and maintaining a model to predict total delivery time is validated by the comparative performance of the baseline approach.\n",
-    "2. There are two significant differences between my approach to this problem and the two other worked examples I found that I believe explain my superior performance. The first difference is the generic per-store order prep time features (addFeatures_store_prep_stats) and the market+hour aggregation features (addFeatures_relative_abundances). The author of the Stratascratch notebook attempted to predict order prep time and raihanmasud did not bother with prep time at all. Neither user bothered to generate aggregate values based on the most important features for their models. The second difference is my use of autoML to do hyperparameter tuning. Raihanmasud hard-coded hyperparameters for their model and the author of the official Stratascratch notebook did not bother with hyperparameter tuning at all.\n",
-    "\n",
-    "Other observations:\n",
-    "1. Giving the model leaky features like the amount of time an order spent in the store (delivery_time - (est_order_creation_time + est_driving_duration)) as well as removing observations with high error produces a cross-validated RMSE scores between 250-350. The best holdout RMSE was around 240. From this one could infer that there is a performance floor.\n",
-    "2. Ratio features and store order preparation time features make up eleven of the top fifteen features and eight of the top ten features when ranked by importance. per the graph below there is also a visible increase in the delivery duration when the onshift-to-outstanding ratio decreases, either from high order volumes or low Dasher counts.\n",
-    "3. The table of category prep time metrics do not appear to have a significant effect on estimation, so those features can be left out of the final pipeline. \n",
-    "4. Variance and independent population analysis confirmed that most of the markets have different hourly average order volumes, but the second-most important feature to the model so far is 'hour_mean_total_outstanding_orders', a basic average aggregation of order volumes across all markets.\n",
-    "5. Normalizing the dataset with a scaler does not produce a significantly better RMSE against the same holdout/test dataset (scaled RMSE 872.52985, unscaled RMSE 876.9018) despite taking longer to train a model.\n"
+    "2. There are two significant differences between my approach to this problem and the two other worked examples I found that I believe explain my superior performance. The first difference is the generic per-store order prep time features (addFeatures_store_prep_stats) and the market+hour aggregation features (addFeatures_relative_abundances). The author of the Stratascratch notebook attempted to predict order prep time and raihanmasud did not bother with prep time at all. Neither user bothered to generate aggregate values based on the most important features for their models. The second difference is my use of autoML to do hyperparameter tuning. Raihanmasud hard-coded hyperparameters for their model and the author of the official Stratascratch notebook did not bother with hyperparameter tuning at all."
    ]
   },
   {
@@ -1106,7 +1099,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1115,21 +1108,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'train_RMSE:': 800.6859330186857,\n",
-       " 'train_RMSE_to_std_ratio': 0.715663472982321,\n",
-       " 'train_MAE:': 552.6452205371852,\n",
-       " 'test_RMSE:': 842.2164553161729,\n",
-       " 'test_RMSE_to_std_ratio': 0.7788351970887283,\n",
-       " 'test_MAE:': 564.320195743545}"
+       "{'train_RMSE:': 724.7308358354761,\n",
+       " 'train_RMSE_to_std_ratio': 0.6477738218729179,\n",
+       " 'train_MAE:': 502.5595400840551,\n",
+       " 'test_RMSE:': 831.0113121828417,\n",
+       " 'test_RMSE_to_std_ratio': 0.7684733004461611,\n",
+       " 'test_MAE:': 552.6305024499935}"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1146,7 +1139,7 @@
     "    task='regression',\n",
     "    cv_folds=5,\n",
     "    run_cv=False,\n",
-    "    file_path='deliveryTime_model_pickles',\n",
+    "    file_path='prepTime_model_pickles',\n",
     "    model_name='xgbreg_nosplit'\n",
     ")\n",
     "prep_est_model[2]"
@@ -1154,7 +1147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -1186,77 +1179,77 @@
        "    <tr>\n",
        "      <th>16</th>\n",
        "      <td>onshift_to_outstanding</td>\n",
-       "      <td>0.116629</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>53</th>\n",
-       "      <td>store_day_median_total_prep_time</td>\n",
-       "      <td>0.065109</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>15</th>\n",
-       "      <td>busy_to_outstanding</td>\n",
-       "      <td>0.048599</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>49</th>\n",
-       "      <td>store_day_of_week_est_time_prep_per_item_mean</td>\n",
-       "      <td>0.039615</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>20</th>\n",
-       "      <td>hour_mean_total_outstanding_orders</td>\n",
-       "      <td>0.028834</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>46</th>\n",
-       "      <td>store_day_of_week_est_time_prep_per_item_min</td>\n",
-       "      <td>0.023976</td>\n",
+       "      <td>0.089348</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>21</th>\n",
        "      <td>hour_mean_total_onshift_dashers</td>\n",
-       "      <td>0.022726</td>\n",
+       "      <td>0.046221</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>54</th>\n",
-       "      <td>store_day_mean_total_prep_time</td>\n",
-       "      <td>0.022209</td>\n",
+       "      <th>53</th>\n",
+       "      <td>store_day_median_total_prep_time</td>\n",
+       "      <td>0.034741</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>28</th>\n",
-       "      <td>market_hour_busy_dasher_abd</td>\n",
-       "      <td>0.021592</td>\n",
+       "      <th>49</th>\n",
+       "      <td>store_day_of_week_est_time_prep_per_item_mean</td>\n",
+       "      <td>0.033508</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>31</th>\n",
-       "      <td>hour_busy_outs_avg</td>\n",
-       "      <td>0.020918</td>\n",
+       "      <th>20</th>\n",
+       "      <td>hour_mean_total_outstanding_orders</td>\n",
+       "      <td>0.031257</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>156</th>\n",
        "      <td>created_day_of_week__0</td>\n",
-       "      <td>0.019794</td>\n",
+       "      <td>0.018070</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>134</th>\n",
+       "      <td>order_protocol__4.0</td>\n",
+       "      <td>0.017247</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>31</th>\n",
+       "      <td>hour_busy_outs_avg</td>\n",
+       "      <td>0.016900</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>busy_to_outstanding</td>\n",
+       "      <td>0.016766</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>40</th>\n",
+       "      <td>created_day_mean_total_busy_dashers</td>\n",
+       "      <td>0.015944</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>50</th>\n",
        "      <td>store_day_of_week_est_time_prep_per_item_std</td>\n",
-       "      <td>0.019534</td>\n",
+       "      <td>0.014197</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>152</th>\n",
-       "      <td>created_hour_of_day__20</td>\n",
-       "      <td>0.016675</td>\n",
+       "      <th>46</th>\n",
+       "      <td>store_day_of_week_est_time_prep_per_item_min</td>\n",
+       "      <td>0.012592</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>51</th>\n",
-       "      <td>store_est_median_total_prep_time</td>\n",
-       "      <td>0.014203</td>\n",
+       "      <th>91</th>\n",
+       "      <td>clean_store_primary_category__japanese</td>\n",
+       "      <td>0.011090</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>24</th>\n",
-       "      <td>market_hour_onshift_to_outstanding_abd</td>\n",
-       "      <td>0.013620</td>\n",
+       "      <th>128</th>\n",
+       "      <td>market_id__4.0</td>\n",
+       "      <td>0.011019</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>54</th>\n",
+       "      <td>store_day_mean_total_prep_time</td>\n",
+       "      <td>0.010778</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1264,24 +1257,24 @@
       ],
       "text/plain": [
        "                                          features  importance\n",
-       "16                          onshift_to_outstanding    0.116629\n",
-       "53                store_day_median_total_prep_time    0.065109\n",
-       "15                             busy_to_outstanding    0.048599\n",
-       "49   store_day_of_week_est_time_prep_per_item_mean    0.039615\n",
-       "20              hour_mean_total_outstanding_orders    0.028834\n",
-       "46    store_day_of_week_est_time_prep_per_item_min    0.023976\n",
-       "21                 hour_mean_total_onshift_dashers    0.022726\n",
-       "54                  store_day_mean_total_prep_time    0.022209\n",
-       "28                     market_hour_busy_dasher_abd    0.021592\n",
-       "31                              hour_busy_outs_avg    0.020918\n",
-       "156                         created_day_of_week__0    0.019794\n",
-       "50    store_day_of_week_est_time_prep_per_item_std    0.019534\n",
-       "152                        created_hour_of_day__20    0.016675\n",
-       "51                store_est_median_total_prep_time    0.014203\n",
-       "24          market_hour_onshift_to_outstanding_abd    0.013620"
+       "16                          onshift_to_outstanding    0.089348\n",
+       "21                 hour_mean_total_onshift_dashers    0.046221\n",
+       "53                store_day_median_total_prep_time    0.034741\n",
+       "49   store_day_of_week_est_time_prep_per_item_mean    0.033508\n",
+       "20              hour_mean_total_outstanding_orders    0.031257\n",
+       "156                         created_day_of_week__0    0.018070\n",
+       "134                            order_protocol__4.0    0.017247\n",
+       "31                              hour_busy_outs_avg    0.016900\n",
+       "15                             busy_to_outstanding    0.016766\n",
+       "40             created_day_mean_total_busy_dashers    0.015944\n",
+       "50    store_day_of_week_est_time_prep_per_item_std    0.014197\n",
+       "46    store_day_of_week_est_time_prep_per_item_min    0.012592\n",
+       "91          clean_store_primary_category__japanese    0.011090\n",
+       "128                                 market_id__4.0    0.011019\n",
+       "54                  store_day_mean_total_prep_time    0.010778"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1292,23 +1285,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 53,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "AttributeError",
-     "evalue": "'list' object has no attribute 'predict'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn [42], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m yhat_train,yhat_test \u001b[39m=\u001b[39m prep_est_cv_model[\u001b[39m0\u001b[39;49m]\u001b[39m.\u001b[39;49mpredict(x_train),prep_est_cv_model[\u001b[39m0\u001b[39m]\u001b[39m.\u001b[39mpredict(x_holdout)\n\u001b[0;32m      2\u001b[0m composite_train,composite_test \u001b[39m=\u001b[39m x_train,x_holdout\n\u001b[0;32m      3\u001b[0m composite_train[\u001b[39m'\u001b[39m\u001b[39mpred_order_prep_time\u001b[39m\u001b[39m'\u001b[39m],composite_test[\u001b[39m'\u001b[39m\u001b[39mpred_order_prep_time\u001b[39m\u001b[39m'\u001b[39m] \u001b[39m=\u001b[39m yhat_train\u001b[39m.\u001b[39mreshape(\u001b[39m-\u001b[39m\u001b[39m1\u001b[39m,\u001b[39m1\u001b[39m),yhat_test\u001b[39m.\u001b[39mreshape(\u001b[39m-\u001b[39m\u001b[39m1\u001b[39m,\u001b[39m1\u001b[39m)\n",
-      "\u001b[1;31mAttributeError\u001b[0m: 'list' object has no attribute 'predict'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "yhat_train,yhat_test = prep_est_cv_model[0].predict(x_train),prep_est_cv_model[0].predict(x_holdout)\n",
+    "yhat_train,yhat_test = prep_est_model[0].predict(x_train),prep_est_model[0].predict(x_holdout)\n",
     "composite_train,composite_test = x_train,x_holdout\n",
     "composite_train['pred_order_prep_time'],composite_test['pred_order_prep_time'] = yhat_train.reshape(-1,1),yhat_test.reshape(-1,1)\n",
     "#composite_train['composite_deliv_time'],composite_test['composite_deliv_time'] = composite_train['pred_order_prep_time'] + composite_train['est_time_non-prep'],composite_test['pred_order_prep_time'] + composite_test['est_time_non-prep']\n",
@@ -1317,39 +1298,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 58,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'train_RMSE:': 743.8711855802673,\n",
-       " 'train_RMSE_to_std_ratio': 0.6444995816078012,\n",
-       " 'train_MAE:': 525.3830954523438,\n",
-       " 'test_RMSE:': 839.3984891100266,\n",
-       " 'test_RMSE_to_std_ratio': 0.7519343047123673,\n",
-       " 'test_MAE:': 559.6701162579369}"
-      ]
-     },
-     "execution_count": 66,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "composite_deliv_model = ApplyMethod_autoML(\n",
-    "    x_train=composite_train.drop(columns=['actual_total_delivery_duration']),\n",
-    "    x_test=composite_test.drop(columns=['actual_total_delivery_duration']),\n",
+    "    x_train=composite_train,\n",
+    "    x_test=composite_test,\n",
     "    y_train=y_train,\n",
     "    y_test=y_holdout,\n",
-    "    time_budget=180,\n",
+    "    time_budget=400,\n",
     "    metric='mse',\n",
     "    estimator_list=['xgb_gamma','xgboost','xgb_limitdepth'],\n",
     "    task='regression',\n",
     "    cv_folds=5,\n",
-    "    run_cv=False\n",
+    "    run_cv=True,\n",
+    "    file_path='deliveryTime_model_pickles',\n",
+    "    model_name='xgbreg_nosplit'\n",
     ")\n",
     "composite_deliv_model[2]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "composite_deliv_model[3]"
    ]
   },
   {
